# wow-toc-updater

./: .gitignore  LICENSE  README.md  action.yml  build_bundle.py  pyproject.toml
.github/workflows/: pr-checks.yml
tests/: conftest.py  test_constants.py  test_content_updater.py  test_file_processor.py  test_update.py  test_version_resolver.py
toc_interface_updater/: content_updater.py  update.py  version_client.py
