[project]
name = "toc-interface-updater"
version = "0.1.0"
description = ""
authors = [
  { name = "Rob Anderson", email = "Mctalian@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = ["requests>=2.32.5"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0"]

[project.scripts]
toc-updater = "toc_interface_updater.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
